# political-leaning-prediction

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
.github/linters/: .markdown-lint.yml  .mypy.ini  .python-lint
.github/workflows/: conventional-commits.yml  conventional-pull-requests.yml  lint.yml
analysis/: dataset_intersection.ipynb  model_evaluation.ipynb  readme.md
analysis/dataset_benchmark/: notebook.ipynb  readme.md
analysis/dataset_intersection/: notebook.ipynb  readme.md
analysis/dataset_statistics/: notebook.ipynb
analysis/existing_model_evaluation/: readme.md
analysis/existing_models_evaluation/: readme.md
demo/political_leaning_prediction_web/app/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json
demo/political_leaning_prediction_web/app/src/: main.rs
demo/political_leaning_prediction_web/app/src/components/: app.rs  input_text.rs  mod.rs  political_leaning_result.rs  politicalness_result.rs  preprocessed_text.rs
demo/political_leaning_prediction_web/app/src/models/: mod.rs  political_leaning.rs  politicalness.rs
demo/political_leaning_prediction_web/app/src/route/: mod.rs
demo/political_leaning_prediction_web/app/src/server/: dotenv.rs  mod.rs
demo/political_leaning_prediction_web/app/src/styles/: tailwind.config.js
demo/political_leaning_prediction_web/app/src/views/: home.rs  mod.rs
docs/: readme.md
models/: political_bias_bert.ipynb
utils/: base_directory.py  dataset_utils.py  datasets.py  existing_models.py  model_utils.py  models.py
(+187 files in other folders)
