[package]
name = "political_leaning_prediction_web"
version = "0.1.0"
authors = ["Matouš Volf <git@matousvolf.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.1"
constcat = { version = "0.6.0", optional = true }
deepl = { version = "0.6.5", optional = true }
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
load-dotenv = { version = "0.1.2", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:constcat",
    "dep:deepl",
    "dep:load-dotenv",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
